# bam-readcount-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build-and-publish.yml
bench/: aggregate.sh  benchmark.ipynb  capture_fixture.sh  parse_all.py  parse_brc.py  rerun_q2fix.sh  run_notebook.sh
bench/results/: latest
bench/results/2000samples/: SUMMARY.md  per_feature_corr.tsv  per_sample_metrics.tsv
bench/results/2000samples_l2l3/: per_feature_corr.tsv
bench/results/2000samples_l2l3/plots/: _make_runtime_compare.py
bench/results/200samples_final/: SUMMARY.md  per_feature_corr.tsv  per_sample_metrics.tsv
src/: bed.rs  main.rs  metrics.rs  pileup.rs
tests/: integration.rs
tests/data/fixtures/T01_tracer/: expected.txt  region.bed
