[package]
name = "bam-readcount-rs"
version = "0.1.0"
edition = "2021"
description = "Fast Rust reimplementation of bam-readcount, drop-in compatible with the SNV per-base output format consumed by STREGA."
license = "MIT"
repository = "https://github.com/theob0t/bam-readcount-rs"

[[bin]]
name = "bam-readcount-rs"
path = "src/main.rs"

[dependencies]
rust-htslib = { version = "0.49", default-features = false, features = ["bzip2", "lzma"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
crossbeam-channel = "0.5"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
